# CK_Firmware

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README  file_with_cout.txt  mk.sh
data/: Lat2-VGA32x16.psf  Uni2-VGA28x16.psf  Uni3-Terminus20x10.psf
data/fonts_in_headers/: Uni2_VGA28x16_psf.h  Uni3_Terminus20x10_psf.h
data/the_menu_structure/: menu.md  menu.md.h
src/: CMakeLists.txt  main.c
src/lib/IO/: CK_Array.h  CK_Loger.h  CK_Logger.h  CK_PasswordPair.h  CK_String.h  CK_string.h  CMakeLists.txt  IO.h  IO_ByteStream.h  IO_DecryptString.h  IO_DeviceInfo.h  IO_EncryptString.h  IO_Message.h  IO_PasswordPair.h  IO_Serial.h  message.h  serial.h
src/lib/IO/src/: CK_Array.cpp  CK_Loger.cpp  CK_Logger.cpp  CK_PasswordPair.cpp  CK_String.cpp  CK_string.cpp  IO.c  IO_ByteStream.cpp  IO_DecryptString.cpp  IO_DeviceInfo.cpp  IO_EncryptString.cpp  IO_Message.cpp  IO_PasswordPair.cpp  IO_Serial.cpp  message.c  serial.c
src/lib/Logic/: CMakeLists.txt  LC_App.h  LC_Callback.h  LC_Main.h  LC_MainTask.h  LC_MessageTask.h  LC_PasswordsTask.h  LC_Task.h  LC_TaskManager.h  Logic.h
src/lib/Logic/src/: LC_App.cpp  LC_Callback.cpp  LC_Main.cpp  LC_MainTask.cpp  LC_MessageTask.cpp  LC_PasswordsTask.cpp  LC_Task.cpp  LC_TaskManager.cpp  Logic.cpp
src/lib/Storage/: CMakeLists.txt  Storage.h  diskio.h  ffconf.h
src/lib/Storage/src/: Storage.cpp  diskio.c  ff.c
src/lib/Storage/src/option/: syscall.c  unicode.c
src/lib/UI/: CMakeLists.txt  Font.h  UI.h  UI_Box.h  UI_Callback.h  UI_Font.h  UI_InputBox.h  UI_Main.h  UI_MessageBox.h  UI_QuestionBox.h  UI_SelectBox.h  UI_Surface.h  UI_Surface.h.gch  UI_Task.h  UI_callback.h  UI_control_funcs.h  UI_font.h  UI_geometry.h  UI_menu.h  UI_message_box.h  UI_surface.h  UI_tasks.h  UI_tree.h  test_task.h
src/lib/UI/src/: Font.cpp  UI.c  UI.cpp  UI_Box.cpp  UI_Font.cpp  UI_InputBox.cpp  UI_Main.cpp  UI_MessageBox.cpp  UI_QuestionBox.cpp  UI_SelectBox.cpp  UI_Surface.cpp  UI_Task.cpp  UI_callback.c  UI_font.c  UI_geometry.c  UI_menu.c  UI_message_box.c  UI_surface.c  UI_tasks.c  UI_tree.c  test_task.cpp
src/lib/app/: CMakeLists.txt  app.h
src/lib/app/src/: app.c
src/lib/emul/: CMakeLists.txt  emulator.h  events.h  flash.h  manager.h  network.h  storage.h  video.h
src/lib/emul/src/: events.c  manager.c  network.c  storage.c  video.c
src/lib/menu/: CMakeLists.txt  font.h  menu.h  menu_tree.h
src/lib/menu/src/: font.c  menu.c  menu_tree.c
src/lib/storage/: CMakeLists.txt  storage.h
src/lib/storage/src/: storage.c
src/tests/: .Storage_ff_test.cpp.swp  CK_Array_test.cpp  CK_Loger_test.cpp  CK_Logger_test.cpp  CK_PasswordPair_test.cpp  CK_string_test.cpp  CMakeLists.txt  IO_ByteStream_test.cpp  IO_PasswordPair_test.cpp  IO_Serial_test.cpp  IO_Serial_test_client.py  IO_test.cpp  IO_test_client.py  LC_test.cpp  Storage_ff_test.cpp  Storage_test.cpp  UI_test.cpp  comm_test.c  emul_storage_test.c  emul_test.c  main_test.cpp  menu_test.c  menu_test.cpp  storage_test.c  surface_test  surface_test.cpp  test
utils/: create_new_modul.sh  menu_gen.py
